# api

./: .dockerignore  .env  .eslintrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yaml  clickhouse.sh  compose.yaml  config.yaml  docker-compose.yaml  manifest.yaml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vector.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy.yaml
api/: Cargo.toml  build.rs
api/src/: db.rs  main.rs  utility.rs
api/src/routes/: mod.rs
api/src/routes/package/: lookup.rs  mod.rs  multi_lookup.rs  search.rs
api/src/routes/repository/: lookup.rs  mod.rs  packages.rs  ranking.rs  safety.rs  search.rs
api/src/routes/utility/: health.rs  index.rs  mod.rs  not_found.rs  openapi.rs
crates/api/: Cargo.toml  build.rs
crates/api/src/: db.rs  main.rs  utility.rs
crates/api/src/helpers/: clients.rs  error_handler.rs  mod.rs  pg_client.rs  prisma_client.rs  responses.rs  typesense_client.rs
crates/api/src/prisma/: mod.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/download/: ingest.rs  mod.rs
crates/api/src/routes/info/: health_check.rs  landing_page.rs  mod.rs  openapi_json.rs  openapi_yaml.rs
crates/api/src/routes/package/: lookup.rs  mod.rs  multi_lookup.rs  search.rs
crates/api/src/routes/repository/: lookup.rs  mod.rs  packages.rs  ranking.rs  safety.rs  search.rs
crates/api/src/routes/utility/: health.rs  index.rs  mod.rs  not_found.rs  openapi.rs
crates/api/src/services/: mod.rs  typesense.rs
crates/api/src/types/: mod.rs  package.rs  repository.rs
crates/api/src/utility/: api.rs  config.rs  database.rs  http.rs  mod.rs  runtime.rs  utility.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: main.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/openapi/: Cargo.toml
crates/openapi/routes/: health.yaml  index.yaml  openapi.yaml  package_multi_lookup.yaml  package_search.yaml  repository_packages.yaml  repository_safety.yaml  repository_search.yaml
crates/openapi/routes/package/: multi_lookup.yaml
crates/openapi/schemas/: bad_request.yaml  landing.json  landing.yaml  notfound_request.yaml  package.yaml  repository.yaml
crates/openapi/src/: lib.rs  schema.rs
deploy/: Cargo.toml
deploy/src/: main.rs
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.yaml
hack/: build.ts  buildInfo.ts  build_manifest.yaml  compile_openapi.ts  generate_build.ts  k8s.ts  load_manifest.ts  manifest.ts  openapi.ts  schemas.ts  tsconfig.json  types.d.ts  update_k8s.ts  upstream.ts
hack/schemas/: generator.ts  landing.ts  package.ts  repository.ts  requests.ts
kubernetes/: api.yaml  clickhouse.yaml  grafana.yaml  ingress.yaml  vector.yaml
openapi/: Cargo.toml
openapi/routes/package/: lookup.yaml  search.yaml
openapi/routes/repository/: lookup.yaml  ranking.yaml
openapi/schemas/: bad_request.json  notfound_request.json  package.json  repository.json
openapi/src/: lib.rs  schema.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20221212133045_init/: migration.sql
prisma/migrations/20221212145554_unique_cache_slug/: migration.sql
prisma/migrations/20221213055155_eslint_casing_fix/: migration.sql
prisma/migrations/20230101200338_rust_keyword/: migration.sql
prisma/migrations/20230102173513_remove_manifest/: migration.sql
prisma/migrations/20230404061059_bootstrap_flag/: migration.sql
src/: configurator.ts  constants.ts  database.ts  index.ts  router.ts  search.ts  server.ts  server.yaml
src/router/: index.ts  utility.ts
src/router/package/: lookup.ts  lookup.yaml  multiLookup.ts  multiLookup.yaml  search.ts  search.yaml
src/router/repository/: lookup.ts  lookup.yaml  packages.ts  packages.yaml  ranking.ts  ranking.yaml  safety.ts  safety.yaml  search.ts  search.yaml
src/router/search/: authors.ts  packages.ts  repositories.ts
