[package]
name = "api"
version = "2.2.6"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
elasticsearch = "8.5.0-alpha.1"
lazy_static = "1.4.0"
once_cell = "1.17.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3", default-features = false, features = ["postgresql"] }
serde = { version = "1.0.152", features = ["derive", "std"] }
serde_json = "1.0.91"
tide = "0.16.0"
tokio = "1.23.0"
url = "2.3.1"

[build-dependencies]
anyhow = "1.0.68"
openapi = { version = "2.0.0", path = "../openapi" }
reqwest = "0.11.13"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tokio = { version = "1.23.0", features = ["full"] }
vergen = "7.4.4"
