[package]
name = "api"
version = "2.4.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
http = "0.2.8"
lazy_static = "1.4.0"
once_cell = "1.17.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3", default-features = false, features = ["postgresql"] }
sentry = { version = "0.29.1", features = ["anyhow"] }
serde = { version = "1.0.152", features = ["derive", "std"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tide = "0.16.0"
tokio = "1.23.0"
url = "2.3.1"

[build-dependencies]
openapi = { version = "2.0.0", path = "../openapi" }
manifest = { version = "2.0.0", path = "../manifest" }
reqwest = "0.11.13"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
vergen = "7.4.4"
serde_yaml = "0.9.16"
